@@ -67,10 +67,6 @@ backups before doing any repartitioning.  Using the analogy of the
 house, you would probably want to move all the furniture out of the
 way before moving a wall or you risk destroying it.
 
-<phrase arch="i386"> Luckily, there is an alternative for some users; see 
-<xref linkend="lossless"/>. </phrase>
-</para>
-
 <para arch="hppa" condition="FIXME">
 
 <emphasis>FIXME: write about HP-UX disks?</emphasis>
@@ -107,9 +103,15 @@ special circumstances like the order of the existing partitions within
 the partition map, that force you to partition before installing
 anyway.
 
+</para><para arch="i386">
+
+If your machine has a FAT filesystem, as used by DOS and older versions of
+Windows, you can wait and use Debian installer's partitioning program to
+resize the FAT filesystem.
+
 </para><para>
 
-In all other cases, you'll need to partition your hard disk before
+If none of the above apply, you'll need to partition your hard disk before
 starting the installation to create partition-able space for
 Debian. If some of the partitions will be owned by other operating
 systems, you should create those partitions using native operating
