@@ -33,13 +33,13 @@ partition.
 One of the most common installations is onto a system that already
 contains DOS (including Windows 3.1), Win32 (such as Windows 95, 98, Me,
 NT, 2000, XP), or OS/2, and it is desired to put Debian onto the same disk
-without destroying the previous system.  As explained in the 
-<xref linkend="partition-sizing"/>, decreasing the size 
-of an existing partition
-will almost certainly damage the data on that partition unless certain
-precautions are taken.  The method described here, while not
-guaranteed to protect your data, works extremely well in practice.  As
-a precaution, you should <emphasis>make a backup</emphasis>.
+without destroying the previous system. Note that the installer supports
+resizing of FAT filesystems as used by DOS and older versions of Windows,
+and in most cases you should not need to use the method described below,
+unless you need to move the start of the FAT filesystem. Newer versions of
+Windows typically use the NTFS filesystem, and the method below will not
+work. To resize NTFS filesystems you will need to find an use the "ntfsresize"
+program.
 
 </para><para>
 
